# func-lab-1

./: README.md  hatch.cabal
lab-getting-started/: LICENSE  README.md  stack.yaml
lab-getting-started/src/hatch/: Layout.hs  Main.hs
src/: Lab.hs
src/hatch/: Hatch.hs  Images.hs
