name:                hatch
version:             0.2.0.0

homepage:
license:             MIT
author:              Alex Dixon (dixonary)
maintainer:          alexander.dixon@warwick.ac.uk
copyright:           2020 Alex Dixon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          *.png
data-dir:            assets

executable hatch
  hs-source-dirs:      src, src/hatch
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, gloss-juicy
  other-modules:       Images, Layout, Transforms, Hatch, Lab, Paths_hatch